k8s/processing-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processing-service
  namespace: fiap-secure-systems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processing-service
  template:
    metadata:
      labels:
        app: processing-service
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: processing-service
          image: ghcr.io/jaisoncoelho/fiap-secure-systems-processing-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: processing-service
  namespace: fiap-secure-systems
spec:
  selector:
    app: processing-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
