k8s/report-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  namespace: fiap-secure-systems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-service
  template:
    metadata:
      labels:
        app: report-service
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: report-service
          image: ghcr.io/jaisoncoelho/fiap-secure-systems-report-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: fiap-secure-systems
spec:
  selector:
    app: report-service
  ports:
    - name: http
      port: 3003
      targetPort: 3003
      protocol: TCP
  type: ClusterIP
