k8s/upload-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: fiap-secure-systems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: upload-service
          image: ghcr.io/jaisoncoelho/fiap-secure-systems-upload-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: fiap-secure-systems
spec:
  selector:
    app: upload-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
